1. Fixed entry title color 2.  fixed left alignment of entry title

--- a/style.css
+++ b/style.css
@@ -1040,7 +1040,7 @@ a:active
 	content: "";
 	width: 10%;
 	height: 2px;
-	background: #e96656;
+	background: #039BE5;
 	bottom: -9px;
 	left: 0;
 }
